@@ -1,0 +1,27 @@
+﻿using System.Windows;
+using System.Windows.Input;
+
+namespace Samples.Commands
+{
+  /// <summary>
+  /// Hides the main window.
+  /// </summary>
+  public class HideSampleWindowCommand : CommandBase<HideSampleWindowCommand>
+  {
+
+    public override void Execute(object parameter)
+    {
+      GetTaskbarWindow(parameter).Hide();
+      CommandManager.InvalidateRequerySuggested();
+    }
+
+
+    public override bool CanExecute(object parameter)
+    {
+      Window win = GetTaskbarWindow(parameter);
+      return win != null && win.IsVisible;
+    }
+
+
+  }
+}
