@@ -1,27 +1,0 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Windows;
-using System.Windows.Input;
-
-namespace Samples.Commands
-{
-  /// <summary>
-  /// Shows the main window.
-  /// </summary>
-  public class ShowMainWindowCommand : CommandBase<ShowMainWindowCommand>
-  {
-    public override void Execute(object parameter)
-    {
-      Application.Current.MainWindow.Show();
-      CommandManager.InvalidateRequerySuggested();
-    }
-
-
-    public override bool CanExecute(object parameter)
-    {
-      return !IsDesignMode && Application.Current.MainWindow.IsVisible == false;
-    }
-
-  }
-}
