@@ -4,23 +4,21 @@ using System.Windows.Input;
 namespace Samples.Commands
 {
   /// <summary>
-  /// Hides the main window.
+  /// Shows the main window.
   /// </summary>
-  public class HideMainWindowCommand : CommandBase<HideMainWindowCommand>
+  public class ShowSampleWindowCommand : CommandBase<ShowSampleWindowCommand>
   {
-
     public override void Execute(object parameter)
     {
-      Application.Current.MainWindow.Hide();
+      GetTaskbarWindow(parameter).Show();
       CommandManager.InvalidateRequerySuggested();
     }
 
 
     public override bool CanExecute(object parameter)
     {
-      return !IsDesignMode && Application.Current.MainWindow.IsVisible;
+      Window win = GetTaskbarWindow(parameter);
+      return win != null && !win.IsVisible;
     }
-
-
   }
 }
