@@ -3,8 +3,8 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   Title="Main"
-  Height="595"
-  Width="596"
+  Height="563"
+  Width="703"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   mc:Ignorable="d">
@@ -31,8 +31,7 @@
       FontStyle="Italic"
       FontWeight="Bold"
       TextWrapping="Wrap"><Run
-        Text="WPF NotifyIcon 1.0.1 - Samples"
-        /></TextBlock>
+        Text="WPF NotifyIcon 1.0.1 - Samples" /></TextBlock>
     <Button
       HorizontalAlignment="Left"
       Margin="10,133,0,0"
@@ -48,8 +47,7 @@
       VerticalAlignment="Top"
       FontWeight="Bold"
       TextWrapping="Wrap"><Run
-        Text="Tutorials:"
-        /></TextBlock>
+        Text="Tutorials:" /></TextBlock>
     <TextBlock
       HorizontalAlignment="Left"
       Margin="10,75.96,0,0"
@@ -58,8 +56,7 @@
       Width="224.31"
       Height="47.04"
       d:LayoutOverrides="HorizontalAlignment"><Run
-        Text="Tutorials follow the contents of the CodeProject article. Check the &quot;Tutorials&quot; folder for the source code."
-        /></TextBlock>
+        Text="Tutorials follow the contents of the CodeProject article. Check the &quot;Tutorials&quot; folder for the source code." /></TextBlock>
     <Button
       HorizontalAlignment="Left"
       Margin="10,170,0,0"
@@ -115,59 +112,53 @@
       x:Name="btnToolTipControl"
       Click="btnToolTipControl_Click" />
     <TextBlock
-      Margin="0,50,166.627,0"
+      Margin="0,50,328.76,0"
       VerticalAlignment="Top"
       FontWeight="Bold"
       TextWrapping="Wrap"
       HorizontalAlignment="Right"
       d:LayoutOverrides="HorizontalAlignment, Width"><Run
-        Text="Showcase Sample:"
-        /></TextBlock>
+        Text="Showcase Sample:" /></TextBlock>
     <TextBlock
-      Margin="0,75.96,90.247,0"
+      Margin="255.31,75.96,145.38,0"
       VerticalAlignment="Top"
       TextWrapping="Wrap"
-      Height="47.04"
-      HorizontalAlignment="Right"
-      Width="179.31"><Run
-        Text="An interactive sample that shows off most features on a single NotifyIcon."
-        /></TextBlock>
+      Height="47.04"><Run
+        Text="An interactive sample that shows off most features on a single NotifyIcon." /></TextBlock>
     <Button
-      HorizontalAlignment="Right"
-      Margin="0,133,105.557,0"
+      Margin="255.31,133,0,0"
       VerticalAlignment="Top"
-      Width="164"
       Height="27"
       Content="Open Sample Window"
       x:Name="btnMainSample"
-      Click="btnMainSample_Click" />
+      Click="btnMainSample_Click"
+      Width="164"
+      HorizontalAlignment="Left" />
     <Path
       Fill="#FFFFFFFF"
       Stretch="Fill"
       Stroke="#FF60758A"
       HorizontalAlignment="Left"
-      Margin="269,57,0,172"
+      Margin="244.31,50,0,66"
       Width="1"
       Data="M269,57 L269,390.18163" />
     <TextBlock
-      Margin="10,413,20,0"
+      Margin="255.31,191,10,0"
       TextWrapping="Wrap"
-      VerticalAlignment="Top"
-      Height="102.76"><Run
-        Text="You will always find the latest news related to the component on the project page:"
-        /><LineBreak />
-      <Hyperlink
-        NavigateUri="http://www.hardcodet.net/wpf-notifyicon">http://www.hardcodet.net/wpf-notifyicon</Hyperlink>
-      <LineBreak /><Run
-        Text=""
-        /><LineBreak /><Run
-        Text="Critical feedback is appreciated - please post bug reports, requests, questions etc. to the CodeProject forum @"
-        />
-      <Hyperlink
-        NavigateUri="http://www.codeproject.com/wpf-notifyicon">http://www.codeproject.com/wpf-notifyicon</Hyperlink>
-      <LineBreak /><Run
-        Text="And if you love it or hate it, please let me know and leave your rating - thanks!"
-        /></TextBlock>
+      VerticalAlignment="Top"><Run
+        Text="You will always find the latest news related to the component on the project page:" /><LineBreak /><Hyperlink
+        NavigateUri="http://www.hardcodet.net/wpf-notifyicon"><Run
+          Text="http://www.hardcodet.net/wpf-notifyicon" /></Hyperlink><LineBreak /><Run
+        Text="" /><LineBreak /><Run
+        Text="Critical feedback is appreciated - please post bug reports, requests, questions etc. to the CodeProject forum" /><Run
+        Language="de-ch"
+        Text=":" /><LineBreak /><Hyperlink
+        NavigateUri="http://www.codeproject.com/KB/WPF/wpf_notifyicon.aspx"><Run
+          Text="http://www.codeproject.com/KB/WPF/wpf_notifyicon.aspx" /></Hyperlink><LineBreak /><Run
+        Text="" /><LineBreak /><Run
+        Language="de-ch"
+        Text="I" /><Run
+        Text="f you love it or hate it, please let me know and leave your rating - thanks!" /></TextBlock>
     <TextBlock
       Margin="10,0,10,10"
       VerticalAlignment="Bottom"
@@ -186,6 +177,24 @@
       VerticalAlignment="Bottom"
       Height="1"
       Data="M11,517 L561.07363,517" />
+    <Button
+      HorizontalAlignment="Left"
+      Margin="11,397,0,0"
+      Width="164"
+      Content="Events"
+      VerticalAlignment="Top"
+      Height="27"
+      x:Name="btnEvents"
+      Click="btnEvents_Click" />
+    <Button
+      HorizontalAlignment="Left"
+      Margin="11,434,0,0"
+      Width="164"
+      Content="Data Binding"
+      VerticalAlignment="Top"
+      Height="27"
+      x:Name="btnDataBinding"
+      Click="btnDataBinding_Click" />
 
   </Grid>
 </Window>
