@@ -1,15 +1,4 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Windows;
-using System.Windows.Controls;
-using System.Windows.Data;
-using System.Windows.Documents;
-using System.Windows.Input;
-using System.Windows.Media;
-using System.Windows.Media.Imaging;
-using System.Windows.Shapes;
+﻿using System.Windows;
 
 namespace Samples.Tutorials.DataBinding
 {
@@ -27,7 +16,8 @@ namespace Samples.Tutorials.DataBinding
     protected override void OnClosing(System.ComponentModel.CancelEventArgs e)
     {
       //clean up notifyicon (would otherwise stay open until application finishes)
-      MyNotifyIcon.Dispose();
+      MyNotifyIcon1.Dispose();
+      MyNotifyIcon2.Dispose();
 
       base.OnClosing(e);
     }
